[package]
name = "stm32-hid-sample"
version = "0.1.0"
authors = ["Ein Terakawa <applause@elfmimi.jp>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f0xx-hal = { version = "0.15.2", features = ["rt", "stm32f072"] }
panic-semihosting = "0.5"
usb-device = "0.2"
usbd-hid = "0.4"
stm32-usbd = { version = "0.4.0", features = ["stm32f072xx"] }

[features]
mouse = []
